[tool.poetry]
name = "serpapi_blog_archive"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dmitriy@serpapi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
parsel = "^1.6.0"
playwright = "^1.20.1"
bs4 = "^0.0.1"
Nasdaq-Data-Link = "^1.0.1"
cloudscraper = "^1.2.60"
google-search-results = "^2.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
